:lipstick: z-index issue

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,8 +4,8 @@
   padding: 0;
   box-sizing: border-box;
 }
-body{
-  background-color: rgba($color: #000000, $alpha: .2);
+body {
+  background-color: rgba($color: #000000, $alpha: 0.2);
 }
 
 #bigContainer {
@@ -17,7 +17,7 @@ body{
 
 #header {
   height: 100vh;
-  border: 1px solid rgba($color: #000000, $alpha: .2);
+  border: 1px solid rgba($color: #000000, $alpha: 0.2);
   // scroll-snap-stop: always;
   // scroll-snap-align: start;
 
@@ -27,7 +27,7 @@ body{
     //@include mixin.center;
 
     .heroContent {
-      border: 1px solid rgba($color: #000000, $alpha: .2);
+      border: 1px solid rgba($color: #000000, $alpha: 0.2);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -66,7 +66,7 @@ body{
 
       #lassieImage {
         position: absolute;
-
+        z-index: 2;
         opacity: 100%;
         // margin-top: 500px;
         // margin-left: 500px;
@@ -84,18 +84,16 @@ body{
         height: auto;
       }
       #textContainer {
-        position:absolute;
+        position: absolute;
         // background-color: rgba(255, 255, 255, 0.8);
         text-transform: uppercase;
         height: 3rem;
         // font-weight: 900;
-        
-        
-        
+
         // top: 45;
         // left: 45;
         color: whitesmoke;
-        
+        z-index: 3;
       }
       h1 {
         font-size: 4rem;
@@ -123,14 +121,12 @@ body{
       //   animation: 10s ease-in-out 1s infinite alternate-reverse animation1;
       // }
       #i {
-        animation: 10s ease-in-out .3s infinite alternate animation1;
-      
+        animation: 10s ease-in-out 0.3s infinite alternate animation1;
       }
       #e {
         transform: translateX(0);
-        animation: 10s ease-in-out .3s infinite alternate animation2;
-        position:absolute;
-
+        animation: 10s ease-in-out 0.3s infinite alternate animation2;
+        position: absolute;
       }
     }
 
@@ -162,7 +158,7 @@ body{
   justify-content: center;
   align-items: center;
   margin-top: 2rem;
-  border: 1px solid rgba($color: #000000, $alpha: .2);
+  border: 1px solid rgba($color: #000000, $alpha: 0.2);
 
   img {
     width: 300px;
@@ -216,33 +212,32 @@ body{
 
 @keyframes animation2 {
   from {
-    transform:translateX(0) ;
+    transform: translateX(0);
   }
 
   to {
-    transform:translateX(-1rem) ;
+    transform: translateX(-1rem);
   }
 }
-.foodContainer{
-  border: 1px solid rgba($color: #000000, $alpha: .2);
+.foodContainer {
+  border: 1px solid rgba($color: #000000, $alpha: 0.2);
   padding: 2rem;
-img{
-  width: 100%;
-  object-fit: cover;
-  @media screen and (min-width:1200px){
-    width:50%
+  img {
+    width: 100%;
+    object-fit: cover;
+    @media screen and (min-width: 1200px) {
+      width: 50%;
+    }
   }
 }
-}
-
 
 .foodInstructions {
   width: 90vw;
   margin-top: 20px;
   font-size: 16px;
   overflow-y: auto;
-  @media all and (min-width:1200px){
-max-width: 50%;
+  @media all and (min-width: 1200px) {
+    max-width: 50%;
   }
 }
 
